# fastapi_template

./: .env  Makefile  docker-compose.yml  pyproject.toml
app/: __init__.py
app/configuration/: __init__.py  server.py
app/internal/pkg/middlewares/: handle_http_exceptions.py
app/internal/pkg/models/: routes.py
app/internal/repository/: __init__.py  repository.py
app/internal/repository/handlers/postgresql/: collect_response.py
app/internal/repository/postgresql/: __init__.py  user.py
app/internal/routes/: __init__.py  user.py
app/internal/services/: __init__.py  user.py
app/pkg/connectors/: __init__.py
app/pkg/models/: user.py
app/pkg/models/base/: __init__.py  enum.py  exception.py
app/pkg/models/core/: containers.py
app/pkg/models/exceptions/: transfer.py  user.py
app/pkg/settings/: __init__.py  settings.py
docker/api/: Dockerfile
docker/migrations/: Dockerfile
migrations/: 20220227_01_DJhOA-create-users-table.py
scripts/: backup-postgresql.sh  migrate.py
